# Bingonet

./: .gitignore  CMakeLists.txt  README.md
bingonet/: bingo_network.h  bingonet.h  config.h
bingonet/activations/: bingo_activation_function.h
bingonet/layers/: bingo_conv_layer.h  bingo_fc_layer.h  bingo_input_layer.h  bingo_layer.h  bingo_layers.h
bingonet/lossfunctions/: bingo_loss_function.h
bingonet/optimizers/: bingo_optimizer.h
bingonet/util/: bingo_aligned_allocator.h  bingo_product.h  bingo_util.h  bingo_weight_init.h  nn_error.h
test/: test.cpp  test_bingo_fc_layer.h  test_bingo_network.h
test/picotest/: picotest.h
